airflow/logs/dag_id=yandex-rates-test/run_id=manual__2023-02-04T072541.737808+0000/task_id=sql_sensor_check/attempt=1.log
[2023-02-04 07:25:47,734] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:25:41.737808+00:00 [queued]>
[2023-02-04 07:25:47,743] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:25:41.737808+00:00 [queued]>
[2023-02-04 07:25:47,744] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-02-04 07:25:47,745] {taskinstance.py:1377} INFO - Starting attempt 1 of 3
[2023-02-04 07:25:47,745] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-02-04 07:25:47,760] {taskinstance.py:1397} INFO - Executing <Task(SqlSensor): sql_sensor_check> on 2023-02-04 07:25:41.737808+00:00
[2023-02-04 07:25:47,764] {standard_task_runner.py:52} INFO - Started process 5652 to run task
[2023-02-04 07:25:47,767] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'yandex-rates-test', 'sql_sensor_check', 'manual__2023-02-04T07:25:41.737808+00:00', '--job-id', '119', '--raw', '--subdir', 'DAGS_FOLDER/yandex_dag_test.py', '--cfg-path', '/tmp/tmp4dvkhoqi', '--error-file', '/tmp/tmpmlg09wpa']
[2023-02-04 07:25:47,768] {standard_task_runner.py:80} INFO - Job 119: Subtask sql_sensor_check
[2023-02-04 07:25:47,829] {task_command.py:371} INFO - Running <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:25:41.737808+00:00 [running]> on host 39df186e1726
[2023-02-04 07:25:47,899] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=yandex-rates-test
AIRFLOW_CTX_TASK_ID=sql_sensor_check
AIRFLOW_CTX_EXECUTION_DATE=2023-02-04T07:25:41.737808+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-02-04T07:25:41.737808+00:00
[2023-02-04 07:25:47,908] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-02-04 07:25:47,954] {sql.py:92} INFO - Poking: select * from rates where ingest_datetime > 2023-02-04 07:25:43 (with parameters None)
[2023-02-04 07:25:47,961] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-02-04 07:25:47,978] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/sensors/base.py", line 277, in execute
    poke_return = self.poke(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/sensors/sql.py", line 93, in poke
    records = hook.get_records(self.sql, self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 162, in get_records
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "07"
LINE 1: ...ect * from rates where ingest_datetime > 2023-02-04 07:25:43
                                                               ^

[2023-02-04 07:25:47,985] {taskinstance.py:1420} INFO - Marking task as UP_FOR_RETRY. dag_id=yandex-rates-test, task_id=sql_sensor_check, execution_date=20230204T072541, start_date=20230204T072547, end_date=20230204T072547
[2023-02-04 07:25:47,997] {standard_task_runner.py:97} ERROR - Failed to execute job 119 for task sql_sensor_check (syntax error at or near "07"
LINE 1: ...ect * from rates where ingest_datetime > 2023-02-04 07:25:43
                                                               ^
; 5652)
[2023-02-04 07:25:48,020] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-02-04 07:25:48,057] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
